Modified base64 checksum